--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -72,5 +72,15 @@ footer ul {
 footer ul li {
   float: left;
   margin-left: 15px;
-  
+
+}
+
+.article-actions {
+  border-top: 1px solid #eaeaea;
+  padding-top: 5px;
+
+}
+
+.description {
+  margin-top: 0;
 }
