--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -26,14 +26,14 @@ $navbar-default-bg: #000;
 }
 
 .jumbotron {
-  background-image: asset-url('rails_home.jpg');
+  background-image: asset-url('ga_home.jpg');
   background-size: cover;
   background-position: center;
-  height: 800px;
+  height: 100vh;
 }
 
 .jumbotron h1 {
-  color: #fff;
+  color: #000;
   text-align: center;
   margin-bottom: 30px;
   letter-spacing: -1px;
@@ -99,4 +99,9 @@ footer ul li {
   border-top: 1px solid #eaeaea;
   padding-top: 15px;
   padding-bottom: 15px;
+}
+
+.listing {
+  list-style: none;
+  padding-left: 0;
 }
