--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -6,7 +6,7 @@
         <div class="row center">
             <div class="col-md-4 col-md-offset-4">
                 <li>Created by:</li>
-                <li><%= link_to (gravatar_for@article.user), user_path(@article.user) %></li>
+                <li><%= link_to (gravatar_for @article.user), user_path(@article.user) %></li>
                 <li class="article-title">
                     <%= link_to @article.user.username, user_path(@article.user) %>
                 </li>
@@ -23,9 +23,11 @@
         </h4>
         <hr>
         <%= simple_format(@article.description) %>
+        <% if logged_in? && current_user == @article.user %>
         <div class="article-actions">
             <%= link_to "Edit this article", edit_article_path(@article), class: "btn btn-xs btn-primary" %>
             <%= link_to "Delete this article", article_path(@article), method: :delete, data: {confirm: "Are you sure you want to delete the article?"}, class: "btn btn-xs btn-danger" %>
+        <% end %>
             <%= link_to "View all articles", articles_path, class: "btn btn-xs btn-success" %>
 
         </div>
