--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -26,14 +26,15 @@ $navbar-default-bg: #000;
 }
 
 .jumbotron {
-  background-image: asset-url('ga_home.jpg');
+  background-image: asset-url('rails_home_real.jpg');
   background-size: cover;
   background-position: center;
-  height: 100vh;
+  height: 700px;
 }
 
 .jumbotron h1 {
-  color: #000;
+  margin-top: 210px;
+  color: #fff;
   text-align: center;
   margin-bottom: 30px;
   letter-spacing: -1px;
